# crypto

./: .gitignore  Cargo.toml  deny.toml  package.json
.github/workflows/: ci.yml  release.yml
crates/sanct-crypto/: Cargo.toml
crates/sanct-crypto/src/: envelope.rs  hybrid.rs  keys.rs  lib.rs  password.rs  pgp.rs  recovery.rs  symmetric.rs  wasm.rs
crates/sanct-swift/: Cargo.toml
crates/sanct-swift/src/: lib.rs
crates/sanct-wasm/: Cargo.toml
crates/sanct-wasm/src/: lib.rs
scripts/: build-swift.sh  build-wasm.sh
src/: index.ts
swift/: Package.swift  README.md
swift/Sources/SanctCrypto/: sanct_swift.swift
wasm/: package.json  sanct_wasm.d.ts  sanct_wasm.js  sanct_wasm_bg.wasm  sanct_wasm_bg.wasm.d.ts
