[package]
name = "sanct-crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
x25519-dalek = { workspace = true }
ml-kem = { workspace = true }
chacha20poly1305 = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["native"]
native = []
wasm = []

[dev-dependencies]
hex = "0.4"
